Prevent pane titles from shrinking on Safari (#369)
* Prevent pane titles from shrinking on Chrome
Fix #367

* Fix browser name; Add version [skip ci]

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -24,6 +24,12 @@ body {
     padding-right: 10px;
 }
 
+/* Fix grid title rendering on Safari 12.0.
+   Inspired by https://stackoverflow.com/questions/32689686/overlapping-css-flexbox-items-in-safari */
+.d-flex {
+    flex-shrink: 0;
+}
+
 /* Tool styles */
 .bg-light {
     background-color: #222!important;
